@@ -37,6 +37,7 @@ pyqtgraph-0.9.9  [unreleased]
     - fixed unicode usage in AxisItem tick strings
     - fixed PlotCurveItem generating exceptions when data has length=0
     - fixed ImageView.setImage only working once
+    - PolyLineROI.setPen() now changes the pen of its segments as well
 
 
 pyqtgraph-0.9.8  2013-11-24
